fix text not fitting in add and subtract button

--- a/scss/setupGame.scss
+++ b/scss/setupGame.scss
@@ -43,6 +43,7 @@ body {
             width: 24px;
             height: 15px;
             display: block;
+            line-height: 15px;
             border: none;
             color: rgba(0, 0, 0, 0.801);
         }
